@@ -1,4 +1,2 @@
-usr/lib/python3*/*/apt_pkg*.so
-usr/lib/python3*/*/apt_inst*.so
 usr/lib/python3*/*/*/
 usr/lib/python3*/*/*.egg-info
